--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
       "@components": ["components"],
       "@screens": ["screens"],
       "@utils": ["utils"],
-      "@assets": ["assets"]
+      "@assets": ["assets"],
+      "@i18n": ["i18n"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
