--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,7 +44,9 @@
       "@screens": ["screens"],
       "@utils": ["utils"],
       "@assets": ["assets"],
-      "@i18n": ["i18n"]
+      "@i18n": ["i18n"],
+      "@constants": ["constants"],
+      "@routes": ["routes"]
     },
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
