--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/bottom-tabs": "^6.0.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.5",
     "@types/i18n-js": "^3.8.2",
-    "axios": "^0.21.1",
+    "axios": "0.19.0",
     "i18n-js": "^3.8.0",
     "native-base": "2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-config": "^1.4.3",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "^12.1.1",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
