--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "native-base": "2.15.2",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-config": "^1.4.3",
+    "react-native-bootsplash": "^3.2.4",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
